--- a/php/views/css/header.css
+++ b/php/views/css/header.css
@@ -1,5 +1,6 @@
 .nav{
-    background-color: red;
     width: 100%;
-    height: 30px;
+    height: 96px;
+    margin-bottom: 3px;
+    border: 1px solid black;
 }
