--- a/php/views/css/book_list.css
+++ b/php/views/css/book_list.css
@@ -1,3 +1,7 @@
+/* .container{
+    display: grid;
+    grid-template-columns: 300px calc(100%-300px);
+} */
 .view-book{
     display: grid;
     grid-template-columns: repeat(4,auto);
