--- a/php/views/css/book_list.css
+++ b/php/views/css/book_list.css
@@ -7,6 +7,8 @@
     grid-template-columns: repeat(4,auto);
     grid-gap: 10px;
     justify-content: center;
+    position: relative;
+    top:100px;
 }
 .book-info{
     border: 1px solid black;
