--- a/php/views/css/header.css
+++ b/php/views/css/header.css
@@ -1,6 +1,12 @@
 .nav{
     width: 100%;
-    height: 96px;
-    margin-bottom: 3px;
-    border: 1px solid black;
+    position: fixed;
+    height: 98px;
+    margin-bottom:4px;
+    background-color:#3deb34;
+    border-bottom: 2px solid #28a745;
+    z-index:5;
+}
+.nav img{
+    border: 1px solid lightcoral;
 }
