--- a/php/views/css/left.css
+++ b/php/views/css/left.css
@@ -1,4 +1,23 @@
-.left{
-    width: 300px;
-    border: 1px solid black;
+.left-router{
+    display: grid;
+    grid-template-columns: repeat(3,200px);
+    justify-content: left;
+    padding: 10px;
+    grid-gap: 50px;
+}
+a .router{
+    text-decoration: nonce;
+}
+.router{
+    text-align: center;
+    font-size: 20px;
+    width: 150px;
+    height: 30px;
+    border: 1px solid white;
+    cursor: pointer;
+    color:lightgreen;
+    padding: 2px;
+}
+.router:hover{
+    background-color:#28a745;
 }
