--- a/php/views/css/header.css
+++ b/php/views/css/header.css
@@ -4,7 +4,7 @@
     height: 98px;
     margin-bottom:4px;
     background-color:#3deb34;
-    border-bottom: 2px solid #28a745;
+    border-bottom: 2px solid #637466;
     z-index:5;
 }
 .nav img{
