--- a/php/views/css/book_list.css
+++ b/php/views/css/book_list.css
@@ -2,6 +2,9 @@
     display: grid;
     grid-template-columns: 300px calc(100%-300px);
 } */
+a{
+    text-decoration: none;
+}
 .view-book{
     display: grid;
     grid-template-columns: repeat(4,auto);
@@ -15,8 +18,9 @@
     padding: 5px;
     width: 300px;
     text-align: center;
+    background-color:#ffc107;
 }
 .book-info img{
-    width: 105px;
-    height: 146px;
+    width: 155px;
+    height: 196px;
 }
